<resources>
    <string name="app_name">FlavorQuest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_query_hint">Ingrediente</string>
    <string name="introduction_text">Olá, %1$s! Antes de iniciar a sua jornada, nos diga o que procura em uma receita...</string>
    <string name="health_specs">Saúde</string>
    <string name="cuisine_type">Culinária</string>
    <string name="meal_type">Refeicao</string>
    <string name="dish_type">Tipo</string>
    <string name="msg_error">Falha na conexão</string>
    <string name="user_level_0">Aprendiz Limpa-Pratos</string>
    <string name="user_level_1">Aventureiro Culinário</string>
    <string name="user_level_2">Guerreiro da Marinada</string>
    <string name="user_level_3">Paladino Sous-Chef</string>
    <string name="user_level_4">Herói Flambador </string>
    <string name="user_level_5">Mestre da Cozinha</string>
    <string name="user_level_introduction">Seja bem-vindo à tela de nível de cozinheiro! Aqui poderá aprender um pouco mais sobre como avançar na sua aventura.</string>
    <string name="user_level_title">Nível de Usuário:</string>
    <string name="saved_recipes_title">Receitas Salvas:</string>
    <string name="user_level_explainer">A jornada para se tornar um verdadeiro mestre da cozinha é longa, mas nada árdua com a ajuda do FlavorQuest! Ao longo da sua trajetória, você terá que aprender muitas receitas e a medida que for salvando a sua experiência (com cada receita salva), seu nível subirá:</string>
    <string name="user_level_0_explainer">Aprendiz Limpa Pratos - Sem nenhuma receita salva, você inicia como um mero aprendiz. Ainda tem muitos pratos para limpar, há um longo caminho pela frente!</string>
    <string name="user_level_1_explainer">Aventureiro Culinário - Sua primeira receita foi registrada, mas como aventureiro você tem um mundo de receitas para desbravar e ingredientes para descobrir!</string>
    <string name="user_level_2_explainer">Guerreiro da Marinada - Com 10 receitas no cinto, você é um guerreiro na cozinha e já pode ir atrás de desafios maiores. Aprimore suas marinadas e siga adiante!</string>
    <string name="user_level_3_explainer">Paladino Sous Chef - Depois de 30 receitas conquistadas, você segue a trilha da justiça e da bondade, e se torna um paladino. Você ganha +1 de Força e +1 de Carisma!</string>
    <string name="user_level_4_explainer">Herói Flambador - Após 50 impressionantes receitas salvas, o seu poder passa a ser reconhecido e você se torna um Herói Flambador!</string>
    <string name="user_level_5_explainer">Mestre da Cozinha - Você alcançou os céus da culinária e se tornou um Mestre da Cozinha! São 100 receitas, mas a jornada nunca termina. Continue cozinhando e se divertindo!</string>
    <string name="search_text">Com esses dados, encontraremos a receita que procura. Vamos lá, pressione o botão e inicie a sua aventura!</string>

    <string-array name="cuisine">
        <item>Americana</item>
        <item>Asiática</item>
        <item>Britânica</item>
        <item>Caribenha</item>
        <item>Chinesa</item>
        <item>Europa Central</item>
        <item>Europa Oriental</item>
        <item>Francesa</item>
        <item>Indiana</item>
        <item>Italiana</item>
        <item>Japonesa</item>
        <item>Kosher</item>
        <item>Mediterrânea</item>
        <item>Mexicana</item>
        <item>Nórdica</item>
        <item>Oriente Médio</item>
        <item>Sulamericana</item>
        <item>Sul-asiática</item>
        <item>nenhuma</item>
    </string-array>

    <string-array name="dish">
        <item>Bebidas</item>
        <item>Biscoitos e Cookies</item>
        <item>Cereais</item>
        <item>Condimentos e Molhos</item>
        <item>Doces</item>
        <item>Entradas</item>
        <item>Pães</item>
        <item>Panquecas</item>
        <item>Prato Principal</item>
        <item>Preparativos</item>
        <item>Preservados</item>
        <item>Saladas</item>
        <item>Sanduíches</item>
        <item>Sobremesas</item>
        <item>Sopas</item>
        <item>nenhum</item>
    </string-array>

</resources>